提出一些疑问、todo

--- a/crudboy-framework/src/main/resources/application.yaml
+++ b/crudboy-framework/src/main/resources/application.yaml
@@ -105,6 +105,7 @@ yudao:
   web:
     admin-ui:
       url: http://dashboard.yudao.iocoder.cn # Admin 管理后台 UI 的地址
+    methodNameAsPaths: true
 
 #  security:
 #    permit-all_urls:
