--- a/crudboy-framework/pom.xml
+++ b/crudboy-framework/pom.xml
@@ -1219,6 +1219,11 @@
             <groupId>com.xingyuv</groupId>
             <artifactId>spring-boot-starter-justauth</artifactId>
         </dependency>
+        <dependency>
+            <groupId>net.sourceforge.htmlunit</groupId>
+            <artifactId>htmlunit-android</artifactId>
+            <version>2.67.0</version>
+        </dependency>
 
     </dependencies>
 
