--- a/crudboy-server/src/main/resources/application.yaml
+++ b/crudboy-server/src/main/resources/application.yaml
@@ -107,9 +107,13 @@ yudao:
       url: http://dashboard.yudao.iocoder.cn # Admin 管理后台 UI 的地址
     methodNameAsPaths: true
 
-#  security:
-#    permit-all_urls:
+  security:
+    permit-all_urls:
 #      - /admin-api/mp/open/** # 微信公众号开放平台，微信回调接口，不需要登录
+      - /admin-api/system/dict-type/get #
+      - /admin-api/system/dict-data/get #  ， ，无法携带租户编号
+      - /admin-api/system/dict-data/list-all-simple #  ， ，无法携带租户编号
+
   websocket:
     enable: true # websocket的开关
     path: /websocket/message # 路径
@@ -157,6 +161,9 @@ yudao:
       - /admin-api/pay/notify/** # 支付回调通知，不携带租户编号
       - /jmreport/* # 积木报表，无法携带租户编号
       - /admin-api/mp/open/** # 微信公众号开放平台，微信回调接口，无法携带租户编号
+      - /admin-api/system/dict-type/get #
+      - /admin-api/system/dict-data/get #  ， ，无法携带租户编号
+      - /admin-api/system/dict-data/list-all-simple #  ， ，无法携带租户编号
     ignore-tables:
       - system_tenant
       - system_tenant_package
