--- a/crudboy-server/pom.xml
+++ b/crudboy-server/pom.xml
@@ -556,7 +556,7 @@
                 <version>2.7.14</version> <!-- 如果 spring.boot.version 版本修改，则这里也要跟着修改 -->
                 <configuration>
                     <fork>true</fork>
-                    <mainClass>cn.iocoder.yudao.module.ServerApplication</mainClass>
+                    <mainClass>cn.iocoder.yudao.ServerApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
